@@ -1,13 +1,19 @@
 package org.upyog.dashboard.util;
 
+import org.apache.commons.lang3.StringUtils;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import lombok.extern.slf4j.Slf4j;
 import java.util.Map;
 
 /**
  * Utility class for JSON formatting and parsing.
  */
+@Slf4j
 public final class JsonUtil {
 
+    /**
+     * Private constructor to prevent instantiation of utility class.
+     */
     private JsonUtil() {
         // Prevent instantiation
     }
@@ -21,7 +27,7 @@ public final class JsonUtil {
      * @return a valid JSON string
      */
     public static String toJsonString(String input, ObjectMapper objectMapper) {
-        if (input == null || input.isBlank()) {
+        if (StringUtils.isBlank(input)) {
             return "{}";
         }
         try {
@@ -29,11 +35,13 @@ public final class JsonUtil {
             if (node != null && (node.isObject() || node.isArray())) {
                 return input;
             }
-        } catch (Exception ignored) {
+        } catch (Exception exception) {
+            log.debug("JsonUtil | Input string is not valid JSON object/array: {}", exception.getMessage());
         }
         try {
             return objectMapper.writeValueAsString(Map.of("error", input));
         } catch (Exception exception) {
+            log.error("JsonUtil | Failed to format error map as JSON for input: {}", input, exception);
             throw new RuntimeException("Failed to format input as JSON: " + exception.getMessage(), exception);
         }
     }
